; ModuleID = '/home/carl/AnghaBench/php-src/ext/standard/extr_var.c_php_var_serialize_class_name.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/standard/extr_var.c_php_var_serialize_class_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PHP_CLASS_ATTRIBUTES = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"O:\00", align 1
@class_name = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [3 x i8] c":\22\00", align 1
@.str.2 = private unnamed_addr constant [3 x i8] c"\22:\00", align 1
@incomplete_class = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @php_var_serialize_class_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @php_var_serialize_class_name(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* @PHP_CLASS_ATTRIBUTES, align 4
  %6 = load i32*, i32** %4, align 8
  %7 = call i32 @PHP_SET_CLASS_ATTRIBUTES(i32* %6)
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @smart_str_appendl(i32* %8, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 2)
  %10 = load i32*, i32** %3, align 8
  %11 = load i32, i32* @class_name, align 4
  %12 = call i32 @ZSTR_LEN(i32 %11)
  %13 = call i32 @smart_str_append_unsigned(i32* %10, i32 %12)
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @smart_str_appendl(i32* %14, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32 2)
  %16 = load i32*, i32** %3, align 8
  %17 = load i32, i32* @class_name, align 4
  %18 = call i32 @smart_str_append(i32* %16, i32 %17)
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @smart_str_appendl(i32* %19, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0), i32 2)
  %21 = call i32 (...) @PHP_CLEANUP_CLASS_ATTRIBUTES()
  %22 = load i32, i32* @incomplete_class, align 4
  ret i32 %22
}

declare dso_local i32 @PHP_SET_CLASS_ATTRIBUTES(i32*) #1

declare dso_local i32 @smart_str_appendl(i32*, i8*, i32) #1

declare dso_local i32 @smart_str_append_unsigned(i32*, i32) #1

declare dso_local i32 @ZSTR_LEN(i32) #1

declare dso_local i32 @smart_str_append(i32*, i32) #1

declare dso_local i32 @PHP_CLEANUP_CLASS_ATTRIBUTES(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
